--- a/Section4_Intro_css/css/index.css
+++ b/Section4_Intro_css/css/index.css
@@ -1,6 +1,13 @@
 body {
   padding-bottom: 500px;
 }
+h4 {
+  color: black;
+
+  border-bottom: 2px solid #111;
+  font-size: 2.5rem;
+  padding: 20px;
+}
 h3 {
   color: green;
 }
@@ -85,4 +92,107 @@ h2 {
 .heith-width2 {
   height: 200px;
   background-color: brown;
+}
+
+.without-padding {
+  background-color: #111;
+  color: #fff;
+}
+
+.with-padding {
+  background-color: #111;
+  color: #fff;
+  padding: 20px;
+}
+
+.indivual-padding {
+  background-color: #176;
+  color: #fff;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 20px;
+  padding-bottom: 40px;
+}
+
+.shorthand-rules {
+  padding: 6px 12px 18px 25px;
+  /* padding: 10px 20px; */
+}
+
+.without-border-box {
+  background-color: #444;
+  color: #fff;
+  width: 400px;
+  padding: 50px;
+}
+
+.with-border-box {
+  background-color: #666;
+  color: #fff;
+  width: 400px;
+  padding: 50px;
+  box-sizing: border-box;
+}
+
+.border {
+  border: 5px solid red;
+  padding: 10px;
+}
+
+.border2 {
+  border: 2px dotted crimson;
+  padding: 25px;
+}
+.border-individual {
+  border-left: 3px solid red;
+  padding: 25px;
+}
+.border-radius {
+  border: 5px solid red;
+  padding: 20px;
+  border-radius: 20px;
+}
+.radius-without-border {
+  background-color: blueviolet;
+  padding: 20px;
+  border-radius: 20px;
+}
+.margem {
+  margin: 10px;
+  background-color: #444;
+  color: aliceblue;
+}
+.margem-top {
+  margin-top: 50px;
+  background-color: #222;
+  color: aliceblue;
+}
+.margeshorthange {
+  margin: 20px 30px;
+  background-color: #333;
+  color: aliceblue;
+}
+.class-31 {
+  margin: 20px;
+  padding: 15px 25 px;
+  border: 3px solid green;
+  border-radius: 8px;
+  width: 200px;
+  height: 200px;
+  span {
+    display: flex;
+    align-self: center;
+    text-align: center;
+  }
+}
+
+#challenger-css {
+  background-color: #777;
+  padding: 40px;
+  outline: 2px solid #2706ad;
+  h2 {
+    background-color: aqua;
+    outline: 20px solid #fff;
+
+  }
 }
