--- a/Section4_Intro_css/css/index.css
+++ b/Section4_Intro_css/css/index.css
@@ -193,6 +193,102 @@ h2 {
   h2 {
     background-color: aqua;
     outline: 20px solid #fff;
-
   }
+}
+.text-aligment {
+  color: #111;
+}
+.text-aligment-right {
+  text-align: right;
+}
+
+.container-center {
+  text-align: center;
+  width: 300px;
+  border: 1px solid red;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.linethrought {
+  text-decoration: line-through;
+}
+
+.remove-underline {
+  text-decoration: none;
+  color: rebeccapurple;
+}
+
+.upper {
+  text-transform: uppercase;
+}
+
+.lower {
+  text-transform: lowercase;
+}
+
+.letterspacing {
+  letter-spacing: 5px;
+}
+
+.serif {
+  font-family: serif;
+}
+.sans-serif {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.monospace {
+  font-family: monospace;
+}
+.cursive {
+  font-family: cursive;
+}
+.fantasy {
+  font-family: fantasy;
+}
+
+.italic {
+  font-style: italic;
+}
+.oblique {
+  font-style: oblique;
+}
+
+.fontweightheavy {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 900;
+}
+.fontweightmedium {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+}
+.fontweightlight {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+}
+
+.fontsizesmall {
+  font-size: 6px;
+}
+.fontsizemedium {
+  font-size: 20px;
+}
+
+.fontsizelarger {
+  font-size: 50px;
+}
+
+.inlineblock {
+  background-color: greenyellow;
+  border: #111 solid 2px;
+  display: inline-block;
+}
+.spandisplay {
+  display: block;
+}
+
+#invisible {
+  display: none;
 }
