--- a/Section4_Intro_css/css/index.css
+++ b/Section4_Intro_css/css/index.css
@@ -321,11 +321,57 @@ h2 {
 }
 
 .relative-container {
-  position: absolute;
+  position: relative;
   background-color: #691;
   color: #fff;
   width: 300px;
   height: 300px;
   border: 3px solid crimson;
   margin-top: 120px;
+}
+
+.pos-fixed {
+  width: 100px;
+  height: 100px;
+  border: 1px solid #523;
+  margin-top: 120px;
+  position: fixed;
+  top: 50px;
+  right: 100px;
+}
+
+.pos-sticky {
+  background-color: #505;
+  width: 100px;
+  height: 100px;
+  border: 1px solid magenta;
+  position: sticky;
+  top: 10px;
+  right: 20px;
+}
+
+.aboslut1,
+.aboslut2,
+.aboslut3 {
+  position: absolute;
+  background-color: #123;
+  width: 50px;
+  height: 50px;
+}
+
+.aboslut1 {
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+}
+.aboslut2 {
+  top: 10px;
+  left: 10px;
+  bottom: 20px;
+  background-color: green;
+}
+.aboslut3 {
+  top: 40px;
+  left: 40px;
+  background-color: red;
 }
